<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Fanfiction Stories</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="download">Download</string>
    <string name="completed">Completed</string>
    <string name="in_progress">In-progress</string>
    <string name="any">Any</string>
    <string name="none">None</string>
    <string name="undo">Undo</string>
    <string name="select_chapter">Select Chapter</string>
    <string name="view_author">View Author</string>
    <string name="sort_by">Order by…</string>
    <string name="group_by">Group by…</string>
    <string name="loading...">Loading…</string>
    <string name="crossovers">Crossovers</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error_with_canon_stories">Can\'t access %s stories; Retrying…</string>
    <string name="page_x">Page %d</string>
    <string name="x_stories">%s stories</string>
    <string name="title_activity_select_category">Select Category</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="cleared_from_cache">Category cache cleared</string>
    <string name="title_crossover">%s (crossovers)</string>
    <string name="statistics">Statistics</string>
    <string name="statistics_template">
"Total Word Count: %s
Words Read: approx. %s (%.2f%%)
Story Count: %d
Stories Read: %d (%.2f%%)
Stories Still Reading: %d (%.2f%%)
Untouched Stories: %d (%.2f%%)"
    </string>
    <string name="local">Local Stories</string>
    <string name="remote">Remote Stories</string>
    <string name="group_none">No Groups</string>
    <string name="group_canon">Canon</string>
    <string name="group_status">Download Status</string>
    <string name="group_author">Author</string>
    <string name="group_category">Category</string>
    <string name="group_rating">Rating</string>
    <string name="group_language">Language</string>
    <string name="group_completion">Completion Status</string>
    <string name="group_genre">Genre</string>
    <string name="group_marker_color">Marker Color</string>
    <string name="no_category">No Category</string>
    <string name="order_word_count">Word Count</string>
    <string name="order_progress">Story Progress</string>
    <string name="order_reviews">Reviews</string>
    <string name="order_follows">Follows</string>
    <string name="order_favorites">Favorites</string>
    <string name="order_chapter_count">Chapter Count</string>
    <string name="order_publish_date">Most Recently Published</string>
    <string name="order_update_date">Most Recently Updated</string>
    <string name="order_added_date">Most Recently Added</string>
    <string name="order_last_read_date">Most Recently Read</string>
    <string name="order_title_alphabetic">Alphabetic (Title)</string>
    <string name="reverse_order">Reverse</string>
    <string name="action_settings">Settings</string>
    <string name="clear_all_cache">Clear all caches</string>
    <string name="resume_story"><![CDATA[Resume: <b>%s</b> by <i>%s</i> — Chapter %d/%d]]></string>
    <string name="nothing_to_resume">No story to resume</string>
    <string name="story_browse">Browse Stories</string>
    <string name="title_activity_settings">Settings</string>
    <string name="category_updating">Story Updates</string>
    <string name="category_text">Text Options</string>
    <string name="text_option_font">Font Name</string>
    <string name="text_option_size">Font Size (sp)</string>
    <string name="text_option_color">Text Color</string>
    <string name="text_option_antialiasing">Enable Anti-Aliasing</string>
    <string name="network_type_title">Required network status</string>
    <string name="network_type_summary">Avoid updating on limited networks</string>
    <string-array name="network_types">
        <item>Don\'t update on roaming networks</item>
        <item>Don\'t update on metered networks</item>
        <item>Update on any network</item>
    </string-array>
    <string-array name="network_types_values">
        <item>not_roaming</item>
        <item>not_metered</item>
        <item>any</item>
    </string-array>
    <string name="update_time_title">Daily auto-update time</string>
    <string name="update_time_summary">Around which hour to update every day</string>
    <string name="category_browser">Story Browsing</string>
    <string name="browser_remember_language">Remember language used in filter</string>
    <string name="category_datetime">Date/Time Display</string>
    <string name="datetime_option_locale">Locale</string>
    <string name="datetime_option_locale_summary">A BCP 47 language tag used for correct formatting of time and date</string>
    <string name="key_option_font" translatable="false">font_option_type</string>
    <string name="key_option_size" translatable="false">font_option_size</string>
    <string name="key_option_color" translatable="false">font_option_color</string>
    <string name="key_option_antialias" translatable="false">font_option_antialias</string>
    <string name="key_option_update_time" translatable="false">auto_updates_time</string>
    <string name="key_option_net_type" translatable="false">auto_updates_network_type</string>
    <string name="key_option_lang_mem" translatable="false">remember_language</string>
    <string name="key_option_locale" translatable="false">datetime_locale</string>
    <string name="option_font_default" translatable="false">Roboto</string>
    <string name="option_size_default" translatable="false">14</string>
    <string name="option_antialias_default" translatable="false">true</string>
    <string name="option_update_time_default" translatable="false">23:00</string>
    <string name="option_net_type_default" translatable="false">not_roaming</string>
    <string name="option_lang_mem_default" translatable="false">true</string>
    <string name="option_locale_default">Default</string>
    <string name="download_notification_channel">Download Notifications</string>
    <string name="downloading_story">Downloading Story</string>
    <string name="updating_story">Updating Story</string>
    <string name="waiting_for_connection">Waiting for connection…</string>
    <string name="connecting">Connecting…</string>
    <string name="network_not_available">Network Not Available</string>
    <string name="error_fetching_story_data">Couldn\'t fetch story data (id %s); Retrying…</string>
    <string name="error_fetching_review_data">Couldn\'t fetch reviews (id %s); Retrying…</string>
    <string name="error_fetching_author_data">Couldn\'t fetch author data (id %s); Retrying…</string>
    <string name="checking_story">Checking %s for updates</string>
    <string name="fetching_chapter">Fetching chapter %d of %d (%.2f%%) for story %s</string>
    <string name="done_story">Done fetching story %s</string>
    <string name="update_failed">Update failed for story %s</string>
    <string name="updated_stories">Updated Stories</string>
    <string name="updated_story">Updated story</string>
    <string name="downloaded_stories">Downloaded Stories</string>
    <string name="downloaded_story">Downloaded story</string>
    <string name="x_stories_downloaded">%d stories downloaded</string>
    <string name="x_stories_updated">%d stories updated</string>
    <string name="accessing_data">Accessing Data</string>
    <string name="error_with_categories">Can\'t access %s data; Retrying…</string>
    <string name="no_updates_found">No updates found</string>
    <string name="story_list">Story List</string>
    <string name="nothing_here_add_stories">There\'s nothing here. Browse and add some stories!</string>
    <string name="filter_by">Filter by…</string>
    <string name="add_by_ffid">Add by FF.net ID</string>
    <string name="story_by_id_title">Add Story by ID</string>
    <string name="text_is_not_id">"%s" is not a valid story ID</string>
    <string name="all_stories">All</string>
    <string name="x_stories_y_filtered">%d stories (%d filtered)</string>
    <string name="removed_story">Story removed</string>
    <string name="updated_on">Updated on %s</string>
    <string name="published_on">Published on %s</string>
    <string name="rated_x">Rated %s</string>
    <string name="storyid_x">Story ID: %d</string>
    <string name="by_author">by %s</string>
    <string name="in_canon">in %s</string>
    <string name="about_genres">about %s</string>
    <string name="with_characters">with %s</string>
    <string name="in_category">in %s</string>
    <string name="chapter_progress">Chapter %d of %d</string>
    <string name="one_chapter">1 Chapter</string>
    <string name="x_chapters">%d Chapters</string>
    <string name="x_words">%s words</string>
    <string name="x_reviews">%d reviews</string>
    <string name="x_favorites">%d favorites</string>
    <string name="x_follows">%d follows</string>
    <string name="adding...">Downloading…</string>
    <string name="select_marker_color">Pick marker color</string>
    <string name="select_marker_color_msg">You can annotate each story with a colored marker</string>
    <string name="go_to_top">Go to Top</string>
    <string name="go_to_bottom">Go to Bottom</string>
    <string name="next_chapter">Next Chapter</string>
    <string name="prev_chapter">Previous Chapter</string>
    <string name="reviews">Story Reviews</string>
    <string name="delete_local">Remove Local Data</string>
    <string name="data_deleted">Story data deleted</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="approx_x_words_left">Approx. %s words left</string>
    <string name="reviews_for">Reviews for %s</string>
    <string name="x_reviews_for_chapter_y">%d reviews for chapter %d</string>
    <string name="chapter_x">For Chapter %d</string>
    <string name="all_chapters">All Chapters</string>
    <string name="reply">Reply</string>
    <string name="report">Report</string>
    <string name="guest">Guest</string>
    <string name="tab_author_bio">Bio</string>
    <string name="tab_author_stories">Stories</string>
    <string name="tab_favorite">Favourites</string>
    <string name="favorite_authors">Favorite Authors</string>
    <string name="action_pm">Send PM</string>
    <string name="follow">Follow</string>
    <string name="favorite">Favorite</string>
    <string name="no_stories_here">There are no stories here</string>
    <string name="native_sort">Sort by…</string>
    <string name="native_time_range">Time Range</string>
    <string name="native_rating">Rating</string>
    <string name="native_length">Length</string>
    <string name="native_status">Status</string>
    <string name="native_language">Language</string>
    <string name="native_genre1">Genre (A)</string>
    <string name="native_genre2">Genre (B)</string>
    <string name="native_world">World</string>
    <string name="native_char1">Character (A)</string>
    <string name="native_char2">Character (B)</string>
    <string name="native_char3" tools:ignore="TypographyOther">Character (C)</string>
    <string name="native_char4">Character (D)</string>
    <string name="native_not_genre">Exclude Genre</string>
    <string name="native_not_world">Exclude World</string>
    <string name="native_not_char1">Exclude Character (A)</string>
    <string name="native_not_char2">Exclude Character (B)</string>
    <string name="debug_title">!!! DEBUG !!!</string>
    <string name="regen_stories_table">Regen stories table</string>
    <string name="add_story">Add story</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tincidunt, magna ut molestie faucibus, felis neque ullamcorper risus, non gravida velit lacus sed nisi. Integer commodo metus at purus finibus suscipit. In interdum metus non arcu fringilla, at ultricies massa pharetra. Phasellus nec tincidunt eros, condimentum scelerisque lorem.</string>
</resources>