<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="slak.fanfictionstories.activities.StoryListActivity">

    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_filter_list_black_24dp"
        android:title="@string/filter_by"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_sort_black_24dp"
        android:title="@string/sort_by"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/group"
        android:icon="@drawable/ic_group_work_black_24dp"
        android:title="@string/group_by"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/jumpTo"
        android:title="@string/jump_to"
        android:visible="true"
        app:showAsAction="never"/>
    <item
        android:id="@+id/collapseAll"
        android:title="@string/collapse_all"
        android:visible="true"
        app:showAsAction="never"/>
    <item
        android:id="@+id/addById"
        android:title="@string/add_by_ffid"
        app:showAsAction="never"/>

    <item
        android:id="@+id/statistics"
        android:title="@string/statistics"
        app:showAsAction="never"/>
</menu>
