<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="slak.fanfictionstories.StoryReaderActivity">
    <item
        android:id="@+id/selectChapter"
        android:icon="@drawable/ic_arrow_drop_down_black_24dp"
        android:title="@string/select_chapter"
        android:visible="true"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/goToTop"
        android:icon="@drawable/ic_arrow_upward_black_24dp"
        android:title="@string/go_to_top"
        android:visible="true"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/goToBottom"
        android:icon="@drawable/ic_arrow_downward_black_24dp"
        android:title="@string/go_to_bottom"
        android:visible="true"
        app:showAsAction="ifRoom"/>
</menu>
