<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="slak.fanfictionstories.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        style="@style/AppTheme.List"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/resumeButton"
            style="@style/AppTheme.Touchable.ListItem.WithDrawable"
            android:text="@string/nothing_to_resume"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/storyListButton"
            style="@style/AppTheme.Touchable.ListItem.WithDrawable"
            android:drawableStart="@drawable/ic_view_list_black_24dp"
            android:text="@string/story_list"/>

        <TextView
            android:id="@+id/storyBrowseButton"
            style="@style/AppTheme.Touchable.ListItem.WithDrawable"
            android:drawableStart="@drawable/ic_library_books_black_24dp"
            android:text="@string/story_browse"/>

        <LinearLayout
            android:id="@+id/debugButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/debug_title"
                android:textColor="@android:color/holo_red_light"/>

            <Button
                android:id="@+id/regenTableBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/regen_stories_table"/>

            <Button
                android:id="@+id/addStoryBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_story"/>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
